TRIUMF-frontend/style.css
::-moz-selection {
  /* Code for Firefox */
  color: rgb(255, 255, 255);
  background: #009fdf;
}

::selection {
  color: rgb(255, 255, 255);
  background: #009fdf;
}

* {
  color: black;
  margin: 0;
  padding: 0;
  font-family: 'Open Sans';

}

body {
  display: flex;
  flex-direction: column;
  background-color: #007bdff9;
  height: 100vh;
  width: 99.9vw;
  max-width: 99.9vw;
  margin: 0;
  font-weight: 500;
  overflow-x: hidden;
  overflow-y: hidden;
}

main {
  display: flex;
  flex-direction: row;
  max-height: 90%;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f5f5f5;
  justify-content: flex-start;
  position: relative;
  border: 5px solid #f5f5f5;
  height: 97%;
  max-height: fit-content;
  width: 50%;
}

footer {
  display: flex;
  height: 5%;
  max-height: 5%;
  background-color: #007bdff9;
  align-items: center;
  margin-top: -0.5%
}

footer p {
  color: #ffffff;
}

.githubLogo {
  width: 2rem;
}

.footerNameLink {
  color: #ffffff;
  margin: 0;
  padding: 0;
}

header {
  height: 5%;
  max-height: 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}

/* nav bar */

.navText {
  font-size: 2rem;
}

header p {
  color: white;
  font-weight: 600;
}

header h2 {
  color: white;
}

table {
  background-color: #ffffff;
  border: 5px solid #ffffff;
  width: 100%;
  font-size: larger;
}

#twitterWidget {
  overflow: hidden;
}
/* RIUMF LOGO */
img.logo {
  height: auto;
  width: 15%;
}

/* VOLTAGE GRAPH */

.chartContainer {
  height: 100%;
  width: 100%;
  overflow-y: hidden;
}

/* MAIN DIAGRAM */
.diagram-img {
  max-height: 100%;
  height: auto;
  width: 100%;
}

.slideshow {
  display: inline-block;
}

.imageLabelContainer {
  display: inline-block;
  width: 100%;
  height: 100%;
}

.imageLabelContainer label.diagramLabelBeamSource {
  position: absolute;
  right: 35%;
  bottom: 25%;
  font-size: large;
  font-weight: 500;
}

.imageLabelContainer label.diagramLabelBeamStatus {
  position: absolute;
  right: 35%;
  bottom: 50%;
  font-size: large;
  font-weight: 500;
}

.slideimg {
  border-radius: 1rem;
  border: 5px solid #f5f5f5;
}


th {
  background: #fff;
  text-align: center;
}

td {
  text-align: center;
}

/* make item blink, active beam info function*/

@keyframes blinker {
  0% {
    border: 5px solid #f5f5f5;
  }
  50% {
    border: 5px solid #006b96;
  }
  100% {
    border: 5px solid #f5f5f5;
  }
}

div.subSection {
  display: flex;
  flex-direction: row;
  background-color: #f5f5f5;
  width: 100%;
  height: 65%;
}

footer {
  justify-content: space-around;
}

div.smallContainer {
  display: inline-block;
  width: 45%;
  height: 99%;
  max-height: 99%;
}

canvas {
  background-color: #ffffff;
}

/* responsive */
@media only screen and (max-width: 600px) {
  body {
    flex-direction: column;
    width: 99vw;
    overflow-y:scroll;
  }
  section {
    flex-direction: column;
    width: 100%;
    max-width: 100%;
    height: 100%;
  }
  table {
    font-size: small;
  }
  main {
    flex-direction: column;
    width: 100%;
    height: auto;
    max-height: fit-content;
  }

  h2 {
    text-align: center;
  }
  div.subSection {
    flex-direction: column;
    max-height: 100%;
    overflow-y: hidden;
    height: 100%;
  }
  div.smallContainer {
    width: 100%;
    height: auto;
    max-height: 100%;
    padding-left: 5%;
  }
  .imageLabelContainer {
    width: auto;
    height: 50vh;
  }

  header {
    width: 100%;
    height: auto;
    flex-direction: column;
    max-height: fit-content;
    padding: 0 0 2rem 0;
    text-align: center;
  }
  .imageLabelContainer {
    width: 100%;
  }
  img.logo {
    width: 100%;
  }
  .chartContainer{
    display: none;
  }

  .navText {
    padding: 5%;
  }
  footer {
    flex-direction: column;
    width: 100%;
    height: auto;
    max-height: 100%;
    text-align: center;
  }
}
.sis {
  background-color: #dcecf1;
}

.mcis {
  background-color: #dcecf1;
}

.mws {
  background-color: #efefef;
}

.mb {
  background-color: #efefef;
}

/* make item blink, active beam info function*/

.activeBeam {
  /* animation that makes element pulse a certain color */
  animation: blinker 1s infinite;
}



/* Graph Data Invisible Div */

#graph_data {
  display: none;
}


@keyframes animate1 {
  0% {
    left: -100%;
  }
  50%,
  100% {
    left: 100%;
  }
}
@keyframes animate2 {
  0% {
    top: -100%;
  }
  50%,
  100% {
    top: 100%;
  }
}
@keyframes animate3 {
  0% {
    right: -100%;
  }
  50%,
  100% {
    right: 100%;
  }
}
@keyframes animate4 {
  0% {
    bottom: -100%;
  }
  50%,
  100% {
    bottom: 100%;
  }
}

